--- a/Style.css
+++ b/Style.css
@@ -6,6 +6,10 @@ li{
     list-style-type: none;
   }
 
+body{
+    background-image: url(https://media.tenor.com/M4SDYNMM_L4AAAAM/werewolf-moonlight.gif);
+    background-size: auto;
+}
 
 header {
         font-size: larger;
@@ -17,6 +21,7 @@ header {
         background-color: rgb(239, 203, 104);
         border-style: groove;
         border-width: 5px;
+        margin-right:1000px;
       }
       
 section {
@@ -29,6 +34,7 @@ section {
     background-color: rgb(60, 33, 110);
     border-style: groove;
     border-width: 5px;
+    margin-right: 500px;
     }
 aside {
     padding-top: 10px;    /* Agrega 10px de padding en la parte superior */
@@ -37,7 +43,7 @@ aside {
     padding-left: 5px;    /* Agrega 5px de padding en el lado izquierdo */
     background-color: rgb(224, 211, 222);
     border-style: groove;
-    border-width: 5px
+    border-width: auto;
 }
 article {
     font-size:small;
@@ -70,6 +76,23 @@ footer {
     padding-bottom: 15px; /* Agrega 15px de padding en la parte inferior */
     padding-left: 5px;    /* Agrega 5px de padding en el lado izquierdo */
     background-color: rgb(60, 226, 198);
+    border-style: groove;
+    border-width: 5px;
+    margin-right: 1000px;
+}
+
+.contenedor{
+    display: flex;
+}
+
+.uno{
+    font-size:small;
+    font-family:Arial, Helvetica, sans-serif;
+    padding-top: 10px;    /* Agrega 10px de padding en la parte superior */
+    padding-right: 30px;  /* Agrega 30px de padding en el lado derecho */
+    padding-bottom: 15px; /* Agrega 15px de padding en la parte inferior */
+    padding-left: 5px;    /* Agrega 5px de padding en el lado izquierdo */
+    background-color: rgb(142, 227, 239);
     border-style: groove;
     border-width: 5px;
 }
